--- a/static/css/first_temp.css
+++ b/static/css/first_temp.css
@@ -259,3 +259,29 @@ p {
 .adw70 {
     width: 70%;
 }
+
+.btns {
+    background: -webkit-linear-gradient(right, #181414ad, #3f539c);
+    border: none;
+    border-radius: 13px;
+    cursor: pointer;
+    color: white;
+    font-family: "Raleway SemiBold", sans-serif;
+    height: 35.3px;
+    margin: 0 auto;
+    /* margin-top: 50px; */
+    /* font-weight: 600; */
+    /* letter-spacing: 0.4px; */
+    transition: 0.3s;
+    width: 106px;
+    /* margin-left: 7.5%;
+  
+  }
+  .btns:hover {
+    /* background: -webkit-linear-gradient(right, #513cf1, #f2777d); */
+    color: white;
+    background: -webkit-linear-gradient(left, #221e1e, #3f539c);
+    border: none;
+    outline: none;
+    /* transition: 0.6s; */
+  }
