--- a/static/assets3/css/pillar-1.css
+++ b/static/assets3/css/pillar-1.css
@@ -450,6 +450,32 @@ iframe {
   border: 0;
 }
 
+
+.btns {
+  background: -webkit-linear-gradient(right, #181414ad, #3f539c);
+  border: none;
+  border-radius: 13px;
+  cursor: pointer;
+  color: white;
+  font-family: "Raleway SemiBold", sans-serif;
+  height: 35.3px;
+  margin: 0 auto;
+  /* margin-top: 50px; */
+  /* font-weight: 600; */
+  /* letter-spacing: 0.4px; */
+  transition: 0.3s;
+  width: 106px;
+  /* margin-left: 7.5%;
+
+}
+.btns:hover {
+  /* background: -webkit-linear-gradient(right, #513cf1, #f2777d); */
+  color: white;
+  background: -webkit-linear-gradient(left, #221e1e, #3f539c);
+  border: none;
+  outline: none;
+  /* transition: 0.6s; */
+}
 summary {
   display: list-item;
   cursor: pointer;
