--- a/templates/resume_templates/first_temp.html
+++ b/templates/resume_templates/first_temp.html
@@ -8,7 +8,8 @@
       content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Responsive CV</title>
+    <title>Template1</title>
+    
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"
@@ -23,6 +24,26 @@
     />
   </head>
   <body>
+   
+    {% if user.is_authenticated %}
+    
+     {% if messages %} {% for message in messages%}
+    <div
+      class="mt-3 alert alert-{{message.tags}} alert-dismissible fade show"
+      role="alert"
+    >
+ <strong>{{message}}</strong>
+      <button
+        type="button"
+        class="close"
+        data-dismiss="alert"
+        aria-label="Close"
+      >
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    {% endfor %} {% endif %}
+
     <div class="container">
       <div class="left_Side">
         <div class="profileText">
@@ -90,18 +111,14 @@
         <div class="contactInfo language">
           <h3 class="title">Languages</h3>
           <ul>
+            {% for i in lang %}
             <li>
-              <span class="text">{{data.lang1}}</span>
+              <span class="text">{{i}}</span>
               <span class="percent">
-                <div data-language="{{data.lang1}}"></div>
+                <div data-language="{{i}}"></div>
               </span>
             </li>
-            <li>
-              <span class="text">{{data.lang2}}</span>
-              <span class="percent">
-                <div data-language="{{data.lang2}}"></div>
-              </span>
-            </li>
+            {% endfor %}
           </ul>
         </div>
       </div>
@@ -126,53 +143,35 @@
         </div>
         <div class="about skills">
           <h2 class="title2">Professionals skills</h2>
+          {% for i in skill %}
           <div class="box">
-            <h4>{{data.skill1}}</h4>
+            <h4>{{i}}</h4>
             <div class="percent">
-              <div data-knowledge="{{data.skill1}}"></div>
+              <div data-knowledge="{{i}}"></div>
             </div>
           </div>
-          <div class="box">
-            <h4>{{data.skill2}}</h4>
-            <div class="percent">
-              <div data-knowledge="{{data.skill2}}"></div>
-            </div>
+          {% endfor %}
           </div>
-          <div class="box">
-            <h4>{{data.skill3}}</h4>
-            <div class="percent">
-              <div data-knowledge="{{data.skill3}}"></div>
-            </div>
-          </div>
-          <div class="box">
-            <h4>{{data.skill4}}</h4>
-            <div class="percent">
-              <div data-knowledge="{{data.skill4}}"></div>
-            </div>
-          </div>
-          <div class="box">
-            <h4>{{data.skill5}}</h4>
-            <div class="percent">
-              <div data-knowledge="{{data.skill5}}"></div>
-            </div>
-          </div>
-        </div>
         <div class="about interest">
           <h2 class="title2">Interests</h2>
           <ul>
+            {% for i in hobby %}
             <li>
-              <i class="fa fa-book" aria-hidden="true"></i> {{data.hobby1}}
+              <i class="fa fa-book" aria-hidden="true"></i> {{i}}
             </li>
-            <li>
-              <i class="fa fa-book" aria-hidden="true"></i> {{data.hobby2}}
-            </li>
-            <li>
-              <i class="fa fa-book" aria-hidden="true"></i> {{data.hobby3}}
-            </li>
+           {% endfor %}
           </ul>
         </div>
       </div>
-      <a href="download/{{data.uid}}"><button>Download Resume</button></a>
+      <a href="{% url 'download' data.uid %}"><button class="btns">Download Resume</button></a>
     </div>
+    {% else %}
+      <nav class="navbar navbar-light bg-light justify-content-between">
+        <a class="navbar-brand">Resume</a>     
+          <a href="{% url 'login' %}"> <button class="btns" type="submit">Login</button></a>
+      </nav>
+      {% endif %}
+      
+    <script src="{% static 'js/main.js' %}"></script>
   </body>
 </html>
