--- a/templates/resume_templates/temp2.html
+++ b/templates/resume_templates/temp2.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,10 +7,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    
 <link href='https://fonts.googleapis.com/css?family=Lato:400,300,700' rel='stylesheet' type='text/css'>
-<link rel="stylesheet" href="/temp2.css"  type="text/css" />
+<link rel="stylesheet" href="{% static 'css/temp2.css' %}"  type="text/css" />
     <title>Document</title>
 </head>
 <body>
+  
+  {% if user.is_authenticated %}
+ 
+  {% if messages %} {% for message in messages%}
+    <div
+      class="mt-3 alert alert-{{message.tags}} alert-dismissible fade show"
+      role="alert"
+    >
+ <strong>{{message}}</strong>
+      <button
+        type="button"
+        class="close"
+        data-dismiss="alert"
+        aria-label="Close"
+      >
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    {% endfor %} {% endif %}
 
 <div class="container">
   <div class="header">
@@ -19,16 +39,16 @@
     </div>
     <div class="contact-info">
       <span class="email">Email: </span>
-      <span class="email-val">{{data.email}}</span>
+      <a href="mailto: {{data.email}}" target="_blank"><span class="email-val">{{data.email}}</span></a>
       <span class="separator"></span>
       <span class="phone">Phone: </span>
-      <span class="phone-val">{{data.phone_number}}</span>
+      <a href="tel:{{data.phone_number}}" target="_blank"><span class="phone-val">{{data.phone_number}}</span></a>
     </div>
     
     <div class="about">
       <span class="position">{{data.profession}} </span>
       <span class="desc">
-       {{data.about}}  </span>
+       {{data.about}}</span>
     </div>
   </div>
    <div class="details">
@@ -42,22 +62,11 @@
             <div class="duration">{{data.company_year_from}} - {{data.company_year_to}}</div>
           </div>
           <div class="right">
-            <div class="name">Fr developer</div>
-            <div class="desc">did This and that</div>
+            <div class="name">{{data.job_title}}</div>
+            <div class="desc">{{data.role}}</div>
           </div>
         </div>
-          <div class="section__list-item">
-          <div class="left">
-            <div class="name">Akount</div>
-            <div class="addr">San Monica, CA</div>
-            <div class="duration">Jan 2011 - Feb 2015</div>
-          </div>
-          <div class="right">
-            <div class="name">Fr developer</div>
-            <div class="desc">did This and that</div>
-          </div>
-        </div>
-
+  
       </div>
     </div>
     <div class="section">
@@ -69,22 +78,9 @@
             <div class="addr">{{data.school_name}}</div>
             <div class="duration">{{data.school_year_from}} - {{data.school_year_to}}</div>
           </div>
-          <div class="right">
-            <div class="name">Fr developer</div>
-            <div class="desc">did This and that</div>
-          </div>
+
         </div>
-        <div class="section__list-item">
-          <div class="left">
-            <div class="name">Akount</div>
-            <div class="addr">San Monica, CA</div>
-            <div class="duration">Jan 2011 - Feb 2015</div>
-          </div>
-          <div class="right">
-            <div class="name">Fr developer</div>
-            <div class="desc">did This and that</div>
-          </div>
-        </div>
+
 
       </div>
       
@@ -97,19 +93,32 @@
            <div class="text">{{data.project_link}}</div>
          </div>
          
-         <div class="section__list-item">
-                    <div class="name">DSP</div>
-           <div class="text">I am a front-end developer with more than 3 years of experience writing html, css, and js. I'm motivated, result-focused and seeking a successful team-oriented company with opportunity to grow. <a href="/login">link</a>
-           </div>
-         </div>
+         
        </div>
     </div>
+
+    <div class="section">
+      <div class="section__title">
+        Languages Known
+        </div>
+        <div class="section__list">
+          <div class="section__list-item">
+            <ul>
+               {% for i in lang %}
+                 <li style="display:inline;font-weight:600">{{i}} &nbsp;</li>
+               {% endfor %}
+             </ul>
+             </div>
+ 
+        </div>
+      </div>
      <div class="section">
        <div class="section__title">Skills</div>
        <div class="skills">
+          {% for i in skill %}
          <div class="skills__item">
            <div class="left"><div class="name">
-             {{data.skill1}}
+             {{i}}
              </div></div>
            <div class="right">
                           <input  id="ck1" type="checkbox" checked/>
@@ -128,88 +137,10 @@
 
            </div>
          </div>
+         {% endfor %}
          
        </div>
-       <div class="skills__item">
-           <div class="left"><div class="name">
-             {{data.skill2}}</div></div>
-           <div class="right">
-                          <input  id="ck1" type="checkbox" checked/>
-
-             <label for="ck1"></label>
-                          <input id="ck2" type="checkbox" checked/>
-
-              <label for="ck2"></label>
-                         <input id="ck3" type="checkbox" />
-
-              <label for="ck3"></label>
-                           <input id="ck4" type="checkbox" />
-            <label for="ck4"></label>
-                          <input id="ck5" type="checkbox" />
-              <label for="ck5"></label>
-
-           </div>
-         </div>
-       <div class="skills__item">
-           <div class="left"><div class="name">
-             {{data.skill3}}</div></div>
-           <div class="right">
-                          <input  id="ck1" type="checkbox" checked/>
-
-             <label for="ck1"></label>
-                          <input id="ck2" type="checkbox" checked/>
-
-              <label for="ck2"></label>
-                         <input id="ck3" type="checkbox" />
-
-              <label for="ck3"></label>
-                           <input id="ck4" type="checkbox" />
-            <label for="ck4"></label>
-                          <input id="ck5" type="checkbox" />
-              <label for="ck5"></label>
-
-           </div>
-         </div>
-       <div class="skills__item">
-           <div class="left"><div class="name">
-             {{data.skill4}}</div></div>
-           <div class="right">
-                          <input  id="ck1" type="checkbox" checked/>
-
-             <label for="ck1"></label>
-                          <input id="ck2" type="checkbox" checked/>
-
-              <label for="ck2"></label>
-                         <input id="ck3" type="checkbox" />
-
-              <label for="ck3"></label>
-                           <input id="ck4" type="checkbox" />
-            <label for="ck4"></label>
-                          <input id="ck5" type="checkbox" />
-              <label for="ck5"></label>
-
-           </div>
-         </div>
-       <div class="skills__item">
-           <div class="left"><div class="name">
-             {{data.skill5}}</div></div>
-           <div class="right">
-                          <input  id="ck1" type="checkbox" checked/>
-
-             <label for="ck1"></label>
-                          <input id="ck2" type="checkbox" checked/>
-
-              <label for="ck2"></label>
-                         <input id="ck3" type="checkbox" />
-
-              <label for="ck3"></label>
-                           <input id="ck4" type="checkbox" />
-            <label for="ck4"></label>
-                          <input id="ck5" type="checkbox" />
-              <label for="ck5"></label>
-
-           </div>
-         </div>
+     
          
        </div>
      <div class="section">
@@ -218,15 +149,27 @@
        </div>
        <div class="section__list">
          <div class="section__list-item">
-                  {{data.hobby1}}, {{data.hobby2}},{{data.hobby3}}.
-          </div>
+           <ul>
+              {% for i in hobby %}
+                <li style="display:inline;font-weight:600">{{i}} &nbsp;</li>
+              {% endfor %}
+            </ul>
+            </div>
+
        </div>
      </div>
      </div>
   </div>
 </div>
-<a href="download/{{data.uid}}"><button>Download Resume</button></a>
-   
-    
+<a href="{% url 'download' data.uid %}"><button class="btns">Download Resume</button></a>
+
+{% else %}
+<nav class="navbar navbar-light bg-light justify-content-between">
+  <a class="navbar-brand">Resume</a>     
+    <a href="{% url 'login' %}"> <button class="btns" type="submit">Login</button></a>
+</nav>
+{% endif %} 
+
+<script src="{% static 'js/main.js' %}"></script>
 </body>
 </html>
