--- a/templates/resume_templates/temp4.html
+++ b/templates/resume_templates/temp4.html
@@ -4,7 +4,6 @@
 <head>
     <title>Template1</title>
     
-    <!-- Meta -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,6 +21,25 @@
 </head> 
 
 <body>
+    {% if user.is_authenticated %}
+   
+    {% if messages %} {% for message in messages%}
+    <div
+      class="mt-3 alert alert-{{message.tags}} alert-dismissible fade show"
+      role="alert"
+    >
+ <strong>{{message}}</strong>
+      <button
+        type="button"
+        class="close"
+        data-dismiss="alert"
+        aria-label="Close"
+      >
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    {% endfor %} {% endif %}
+
     <div class="wrapper mt-lg-5">
         <div class="sidebar-wrapper">
             <div class="profile-container">
@@ -55,17 +73,17 @@
             <div class="languages-container container-block">
                 <h2 class="container-block-title">Languages</h2>
                 <ul class="list-unstyled interests-list">
-                    <li>{{data.lang1}} <span class="lang-desc">(Native)</span></li>
-                    <li>{{data.lang2}} <span class="lang-desc">(Professional)</span></li>
-                    {% comment %} <li>Spanish <span class="lang-desc">(Professional)</span></li> {% endcomment %}
-            </div><!--//interests-->
+                    {% for i in lang %}
+                    <li style="display:inline">{{i}}</li>
+                    {% endfor %}
+                </div><!--//interests-->
             
             <div class="interests-container container-block">
                 <h2 class="container-block-title">Interests</h2>
                 <ul class="list-unstyled interests-list">
-                    <li>{{data.hobby1}}</li>
-                    <li>{{data.hobby2}}</li>
-                    <li>{{data.hobby3}}</li>                
+                    {% for i in hobby %}
+                    <li>{{i}}</li>
+                    {% endfor %}
                 </ul>
             </div><!--//interests-->
             
@@ -73,12 +91,14 @@
         
         <div class="main-wrapper">
             
-            <section class="section summary-section">
+            {% comment %} <section class="section summary-section">
                 <h2 class="section-title"><span class="icon-holder"><i class="fas fa-user"></i></span>Career Profile</h2>
                 <div class="summary">
-                    <p>Summarise your career here lorem ipsum dolor sit amet, consectetuer adipiscing elit. You can <a href="https://themes.3rdwavemedia.com/bootstrap-templates/resume/orbit-free-resume-cv-bootstrap-theme-for-developers/" target="_blank">download this free resume/CV template here</a>. Aenean commodo ligula eget dolor aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu.</p>
+                    <p>Summarise your career here lorem ipsum dolor sit amet, consectetuer adipiscing elit. You can 
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ab nemo officia, ex quisquam culpa similique fugit. Vitae minima optio aut saepe quod, fugiat 
+                    officiis quidem. Maxime, optio voluptas corrupti quam corporis adipisci maiores quas. Mollitia fuga fugit rem ut commodi.</p>
                 </div><!--//summary-->
-            </section><!--//section-->
+            </section><!--//section--> {% endcomment %}
             
             <section class="section experiences-section">
                 <h2 class="section-title"><span class="icon-holder"><i class="fas fa-briefcase"></i></span>Experiences</h2>
@@ -95,105 +115,46 @@
                     <p>{{data.role}}</p>   
                     </div><!--//details-->
                 </div><!--//item-->
-                <div class="item">
-                    <div class="meta">
-                        <div class="upper-row">
-                            <h3 class="job-title">{{data.job_title}}</h3>
-                            <div class="time">{{data.company_year_from}}-{{data.company_year_to}}</div>
-                        </div><!--//upper-row-->
-                        <div class="company">{{data.company_name}}</div>
-                    </div><!--//meta-->
-                    <div class="details">
-                    <p>{{data.role}}</p>   
-                    </div><!--//details-->
-                </div><!--//item-->
-                
-                <div class="item">
-                    <div class="meta">
-                        <div class="upper-row">
-                            <h3 class="job-title">Senior Software Engineer</h3>
-                            <div class="time">2018 - 2019</div>
-                        </div><!--//upper-row-->
-                        <div class="company">Google, London</div>
-                    </div><!--//meta-->
-                    <div class="details">
-                        <p>Describe your role here lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>  
-                        
-                    </div><!--//details-->
-                </div><!--//item-->
-                
+                  
              
             </section><!--//section-->
             
             <section class="section projects-section">
                 <h2 class="section-title"><span class="icon-holder"><i class="fas fa-archive"></i></span>Projects</h2>
-                <div class="intro">
-                    <p>You can list your side projects or open source libraries in this section. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum et ligula in nunc bibendum fringilla a eu lectus.</p>
-                </div><!--//intro-->
+             
                 <div class="item">
                     <span class="project-title"><a href="{{data.project_link}}" target="_blank">{{data.project_title}}</a></span> - <span class="project-tagline">{{data.project_tagline}}</span>    
                 </div><!--//item-->
-                <div class="item">
-                    <span class="project-title"><a href="{{data.project_link}}" target="_blank">{{data.project_title}}</a></span> - <span class="project-tagline">{{data.project_tagline}}</span>
-                </div><!--//item-->
-                <div class="item">
-                    <span class="project-title"><a href="{{data.project_link}}" target="_blank">{{data.project_title}}</a></span> - <span class="project-tagline">{{data.project_tagline}}</span>
-                </div><!--//item-->
+                
                </section><!--//section-->
             
             <section class="skills-section section">
                 <h2 class="section-title"><span class="icon-holder"><i class="fas fa-rocket"></i></span>Skills &amp; Proficiency</h2>
-                <div class="skillset">        
+                <div class="skillset"> 
+                    {% for i in skill %}       
                     <div class="item">
-                        <h3 class="level-title">{{data.skill1}}</h3>
+                        <h3 class="level-title">{{i}}</h3>
                         <div class="progress level-bar">
 						    <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 99%" aria-valuenow="99" aria-valuemin="0" aria-valuemax="100"></div>
 						</div>                               
                     </div><!--//item-->
-                    <div class="item">
-                        <h3 class="level-title">{{data.skill1}}</h3>
-                        <div class="progress level-bar">
-						    <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 99%" aria-valuenow="99" aria-valuemin="0" aria-valuemax="100"></div>
-						</div>                               
-                    </div><!--//item-->
-                    <div class="item">
-                        <h3 class="level-title">{{data.skill1}}</h3>
-                        <div class="progress level-bar">
-						    <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 99%" aria-valuenow="99" aria-valuemin="0" aria-valuemax="100"></div>
-						</div>                               
-                    </div><!--//item-->
-                    <div class="item">
-                        <h3 class="level-title">{{data.skill2}}</h3>
-                        <div class="progress level-bar">
-						    <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 99%" aria-valuenow="99" aria-valuemin="0" aria-valuemax="100"></div>
-						</div>                               
-                    </div><!--//item-->
-                    <div class="item">
-                        <h3 class="level-title">{{data.skill3}}</h3>
-                        <div class="progress level-bar">
-						    <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 99%" aria-valuenow="99" aria-valuemin="0" aria-valuemax="100"></div>
-						</div>                               
-                    </div><!--//item-->
-                    <div class="item">
-                        <h3 class="level-title">{{data.skill4}}</h3>
-                        <div class="progress level-bar">
-						    <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 99%" aria-valuenow="99" aria-valuemin="0" aria-valuemax="100"></div>
-						</div>                               
-                    </div><!--//item-->
-                    <div class="item">
-                        <h3 class="level-title">{{data.skill5}}</h3>
-                        <div class="progress level-bar">
-						    <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 99%" aria-valuenow="99" aria-valuemin="0" aria-valuemax="100"></div>
-						</div>                               
-                    </div><!--//item-->
+                    {% endfor %}
                 </div>  
             </section><!--//skills-section-->
             
         </div><!--//main-body-->
     </div>
-    <a href="download/{{data.uid}}"><button>Download Resume</button></a>
+    <a href="{% url 'download' data.uid %}"><button class="btns">Download Resume</button></a>
    
-        
+    {% else %}
+      <nav class="navbar navbar-light bg-light justify-content-between">
+        <a class="navbar-brand">Resume</a>     
+          <a href="{% url 'login' %}"> <button class="btns" type="submit">Login</button></a>
+      </nav>
+      {% endif %}
+
+      
+    <script src="{% static 'js/main.js' %}"></script>
 </body>
 </html> 
 
